# ai-gateway

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  ROUTING.md  UDF.md  config.sample.basic.yaml  config.sample.yaml  docker-compose.yml  langdb-ai-gateway.config.sample.yaml  release.sh
.cargo/: config.toml
.github/workflows/: lint.yaml
core/: Cargo.toml
core/src/: embed_mod.rs  embed_mod_ollama.rs  error.rs  http.rs  lib.rs  models.rs  otel.rs
core/src/database/: clickhouse.rs  error.rs  executor.rs  mod.rs  ssh_tunnel.rs  user.rs
core/src/embed_mod/: ollama.rs
core/src/events/: layer.rs  mod.rs
core/src/executor/: context.rs  embeddings.rs  image_generation.rs  mod.rs  responses.rs
core/src/executor/chat_completion/: basic_executor.rs  mod.rs  routed_executor.rs  stream_executor.rs  stream_wrapper.rs
core/src/handler/: chat.rs  embedding.rs  image.rs  mod.rs  models.rs  responses.rs
core/src/handler/middleware/: rate_limit.rs
core/src/llm_gateway/: message_mapper.rs  provider.rs
core/src/model/: anthropic.rs  bedrock.rs  cached.rs  document_adapter.rs  error.rs  executor.rs  handler.rs  langdb_open.rs  mcp.rs  mod.rs  ollama.rs  ollama_api.rs  openai.rs  proxy.rs  tools.rs  types.rs
core/src/model/gemini/: client.rs  mod.rs  model.rs  tests.rs  types.rs
core/src/model/image_generation/: langdb_open.rs  mod.rs  ollama.rs  openai.rs
core/src/model/mcp_server/: tavily.rs
core/src/otel/: database.rs  mod.rs
core/src/pricing/: calculator.rs
core/src/responses/: mod.rs
core/src/routing/: mod.rs
core/src/routing/strategy/: metric.rs  mod.rs  script.rs
core/src/types/: cache.rs  credentials.rs  db_connection.rs  embed.rs  engine.rs  gateway.rs  http.rs  message.rs  mod.rs  provider.rs  threads.rs
core/src/types/guardrails/: evaluator.rs  mod.rs  partner.rs  service.rs
core/src/usage/: connection_manager.rs  mod.rs
docker/clickhouse/server/config.d/: custom.xml  docker_related_config.xml
docker/clickhouse/server/config.d/functions/: langdb_functions.xml  sample.xml
gateway/: Cargo.toml  models.yaml
gateway/src/: callback_handler.rs  cli.rs  config.rs  cost.rs  embed_mod.rs  guardrails.rs  http.rs  lib.rs  limit.rs  main.rs  otel.rs  rest.rs  session.rs  tracing.rs  tui.rs  usage.rs
gateway/src/events/: layer.rs
gateway/src/executor/: mod.rs
gateway/src/executor/chat_completion/: stream_executor.rs
gateway/src/llm_gateway/: message_mapper.rs  provider.rs
gateway/src/middleware/: mod.rs  trace_logger.rs
gateway/src/model/: bedrock.rs  langdb_open.rs  openai.rs  tools.rs  types.rs
gateway/src/model/gemini/: client.rs
gateway/src/model/image_generation/: langdb_open.rs  openai.rs
gateway/src/run/: mod.rs  models.rs  table.rs
gateway/src/types/: aws.rs  gateway.rs  image.rs  mod.rs
guardrails/: Cargo.toml  README.md
guardrails/src/guards/: config.rs  dataset.rs  llm_judge.rs  mod.rs  partner.rs  regex.rs  schema.rs  tests.rs  traced.rs  word_count.rs
guardrails/src/guards/config/: models.yaml  templates.yaml
guardrails/src/guards/partners/: openai.rs
server/: Cargo.toml
server/src/: config.rs  cost.rs  main.rs  otel.rs  rest.rs
sql/: traces.sql
src/: embed_mod.rs  error.rs  lib.rs  models.rs  otel.rs
src/events/: mod.rs
src/executor/: embeddings.rs
src/executor/chat_completion/: mod.rs
src/handler/: chat.rs  image.rs  mod.rs  models.rs
src/llm_gateway/: mod.rs
src/model/: anthropic.rs  bedrock.rs  executor.rs  handler.rs  langdb_open.rs  mod.rs  openai.rs  openai_spec_client.rs  tools.rs
src/model/gemini/: client.rs  model.rs  tools.json  types.rs
src/model/image_generation/: langdb_open.rs  mod.rs  openai.rs
src/types/: credentials.rs  engine.rs  json.rs  message.rs  mod.rs  threads.rs
udfs/: Cargo.toml
udfs/src/: completions.rs  embed.rs  lib.rs  main.rs  tracing.rs  types.rs
