[workspace]
resolver = "2"
members = ["gateway", "core", "udfs", "guardrails"]
default-members = ["gateway", "udfs"]

[workspace.dependencies]
async-openai = { version = "0.27.3", package = "async-openai-compat" }
thiserror = "2.0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.8"
lazy_static = "1.4"
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = { version = "0.1.40", features = ["log", "valuable"] }
tracing-opentelemetry = { version = "0.25", default-features = false }
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-subscriber = { version = "0.3.0", features = [
  "env-filter",
  "tracing-log",
  "valuable",
] }

opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17", features = ["tls"] }
opentelemetry_sdk = { version = "0.24.0", features = ["rt-tokio"] }

valuable = { version = "0.1", features = ["derive"] }