[package]
name = "langdb_core"
version = "0.1.3"
edition = "2021"
authors = ["LangDB Team<api@langdb.ai>"]
description = "AI gateway Core for LangDB AI Gateway."
license = "Apache-2.0"
repository = "https://github.com/langdb/ai-gateway"
documentation = "https://docs.langdb.ai"
readme = "../README.md"
keywords = ["llm", "openai", "anthropic", "gemini", "mcp"]
categories = ["web-programming", "network-programming"]

[lib]
name = "langdb_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.37.0", features = ["sync"] }
tokio-stream = { version = "0.1.15", features = ["io-util"] }
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-opentelemetry = { version = "0.25", default-features = false }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
serde = { version = "1.0.199", features = ["serde_derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.82"
thiserror = "2.0.11"
async-openai = { version = "0.27.3", package = "async-openai-compat" }
futures = "0.3"

serde_with = { version = "3.8.1", features = ["json"] }
validator = { version = "0.20", features = ["derive"] }
clust = { git = "https://github.com/langdb/clust", branch = "feat/sonnet-3.7" }
indexmap = { version = "2.2.6", features = ["serde"] }
serde_tuple = "0.5.0"
minijinja = "2.0.1"
base64 = "0.22.1"
aws-smithy-types = { version = "1.2.0", features = [
  "serde-deserialize",
  "serde-serialize",
] }
aws-sdk-bedrock = "1.72.0"
aws-sdk-bedrockruntime = "1.64.0"
aws-smithy-runtime-api = "1.2.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
bytemuck = { version = "1.16", features = ["derive"] }
reqwest-eventsource = "0.6.0"
reqwest = { version = "0.12.2", default-features = false, features = [
  "json",
  "stream",
] }
regex = "1.11.1"
secrecy = { version = "0.10.3", features = ["serde"] }
actix-web = "4"
tonic = "0.12.0"
dashmap = "6.0.1"
bytes = { version = "1", features = ["serde"] }
either = "1.13.0"
tracing = { version = "0.1.40", features = ["log", "valuable"] }
tracing-subscriber = { version = "0.3.0", features = [
  "env-filter",
  "tracing-log",
  "valuable",
] }
valuable = { version = "0.1", features = ["derive"] }
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24.0", features = ["rt-tokio"] }
opentelemetry-proto = { version = "0.7.0", features = [
  "gen-tonic",
  "trace",
  "with-serde",
] }
openssh = { version = "0.11.5", optional = true }
clickhouse = { version = "0.11.6", package = "langdb_clickhouse", features = [
  "uuid",
], optional = true }
tokio-util = { version = "0.7.11", optional = true }
async-mcp = "0.0.6"
parking_lot = "0.12.3"
rand = "0.8.5"
deno_core = "0.334.0"

[features]
default = ["database"]
database = ["dep:openssh", "dep:clickhouse", "dep:tokio-util"]
