[package]
name = "langdb_core"
version = "0.2.2"
edition = "2021"
authors = ["LangDB Team<api@langdb.ai>"]
description = "AI gateway Core for LangDB AI Gateway."
license = "Apache-2.0"
repository = "https://github.com/langdb/ai-gateway"
documentation = "https://docs.langdb.ai"
readme = "../README.md"
keywords = ["llm", "openai", "anthropic", "gemini", "mcp"]
categories = ["web-programming", "network-programming"]

[lib]
name = "langdb_core"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tokio-stream = { version = "0.1.15", features = ["io-util"] }
tracing-futures = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
async-openai = { workspace = true }
futures = "0.3"

serde_with = { version = "3.14.0", features = ["json"] }
validator = { version = "0.20", features = ["derive"] }
clust = { version = "0.9.3", package = "langdb_clust" }
indexmap = { version = "2.10.0", features = ["serde"] }
serde_tuple = "1.1.0"
minijinja = "2.0.1"
base64 = "0.22.1"
aws-smithy-types = { version = "1.3.2", features = [
  "serde-deserialize",
  "serde-serialize",
] }
aws-sdk-bedrock = "1.100.0"
aws-sdk-bedrockruntime = "1.93.0"
aws-smithy-runtime-api = "1.8.1"
aws-config = { version = "1.8.0", features = ["behavior-version-latest"] }
bytemuck = { version = "1.16", features = ["derive"] }
reqwest-eventsource = "0.6.0"
reqwest = { version = "0.12.20", default-features = false, features = [
  "json",
  "stream",
] }
regex = "1.11.1"
secrecy = { version = "0.10.3", features = ["serde"] }
actix-web = "4"
tonic = { workspace = true }
dashmap = "6.0.1"
bytes = { version = "1", features = ["serde"] }
either = "1.15.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
valuable = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-proto = { version = "0.30.0", features = [
  "gen-tonic",
  "trace",
  "with-serde",
] }
openssh = { version = "0.11.5", optional = true }
clickhouse = { version = "0.11.6", package = "langdb_clickhouse", features = [
  "uuid",
], optional = true }
tokio-util = { version = "0.7.11", optional = true }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "4c34b64b7f8dcabf94d52a9c6518c6b49c1f0451", default-features = true, features = [
  "transport-sse-client",
  "reqwest",
  "client",
  "server",
  "transport-streamable-http-client",
] }
rmcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "4c34b64b7f8dcabf94d52a9c6518c6b49c1f0451", default-features = true}
parking_lot = "0.12.4"
rand = "0.8.5"
url = "2.5.4"
# deno_core = "0.334.0"

[features]
default = ["database"]
database = ["dep:openssh", "dep:clickhouse", "dep:tokio-util"]
