[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai-gateway"
path = "src/main.rs"

[dependencies]
langdb_core = { path = "../core" }
tokio = { version = "1.37.0", features = ["sync"] }
tokio-stream = { version = "0.1.15", features = ["io-util"] }
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-opentelemetry = { version = "0.25", default-features = false }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
serde = { version = "1.0.199", features = ["serde_derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.82"
thiserror = "1.0.59"
futures = "0.3.30"
actix-cors = "0.7.0"

serde_with = { version = "3.8.1", features = ["json"] }
validator = { version = "0.18", features = ["derive"] }
indexmap = { version = "2.2.6", features = ["serde"] }
serde_tuple = "0.5.0"
minijinja = "2.0.1"
base64 = "0.22.1"
bytemuck = { version = "1.16", features = ["derive"] }
reqwest-eventsource = "0.6.0"
reqwest = { version = "0.12.2", default-features = false, features = [
  "json",
  "stream",
] }
regex = "1.11.1"
secrecy = { version = "0.8.0", features = ["serde"] }
actix-web = "4"
tonic = "0.12.0"
dashmap = "6.0.1"
either = "1.13.0"
tracing = { version = "0.1.40", features = ["log", "valuable"] }
tracing-subscriber = { version = "0.3.0", features = [
  "env-filter",
  "tracing-log",
  "valuable",
] }
valuable = { version = "0.1", features = ["derive"] }
opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17", features = ["tls"] }
opentelemetry_sdk = { version = "0.24.0", features = ["rt-tokio"] }
opentelemetry-proto = { version = "0.7.0", features = [
  "gen-tonic",
  "trace",
  "with-serde",
] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
prettytable-rs = "0.10.0"
dotenv = "0.15.0"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]
