[package]
name = "langdb_guardrails"
version = "0.1.0"
edition = "2021"

[dependencies]
langdb_core = { path = "../core", version = "0.1.3" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
jsonschema = "0.17"
regex = "1.8"
lazy_static = "1.4"
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
chrono = "0.4"
tracing = { version = "0.1.40", features = ["log", "valuable"] }
tracing-futures = { version = "0.2", features = ["futures-03"] }
valuable = { version = "0.1", features = ["derive"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.0", features = [
  "env-filter",
  "tracing-log",
  "valuable",
] }
