[package]
name = "langdb_guardrails"
version = "0.1.0"
edition = "2021"

[dependencies]
langdb_core = { path = "../core", version = "0.1.3" }
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
jsonschema = "0.17"
regex = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
valuable = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.0", features = [
  "env-filter",
  "tracing-log",
  "valuable",
] }
