[package]
name = "langdb_guardrails"
version = "0.2.2"
edition = "2021"
authors = ["LangDB Team<api@langdb.ai>"]
description = "AI gateway Core for LangDB AI Gateway."
license = "Apache-2.0"
repository = "https://github.com/langdb/ai-gateway"
documentation = "https://docs.langdb.ai"
readme = "../README.md"
keywords = ["llm", "openai", "anthropic", "gemini", "mcp"]
categories = ["web-programming", "network-programming"]

[dependencies]
langdb_core = { path = "../core", version = "0.2.2" }
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
jsonschema = "0.30"
regex = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
valuable = { workspace = true }
async-openai = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.0", features = [
  "env-filter",
  "tracing-log",
  "valuable",
] }
