[package]
name = "udfs"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["io-util"] }
async-openai = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0.199", features = ["serde_derive"] }
serde_json = "1.0"
futures = "0.3"
reqwest = { version = "0.12.2", default-features = false, features = [
  "json",
  "stream",
] }
secrecy = { version = "0.10.3", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing-appender = "0.2.3"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.0", features = [
  "env-filter",
  "tracing-log",
] }
uuid = "1.13.1"


[[bin]]
path = "src/main.rs"
name = "langdb_udf"

[dev-dependencies]
mockall = "0.11"
tokio = { version = "1.0", features = ["full"] }

[dependencies.openssl]
version = "0.10"
features = ["vendored"]
